@@ -1,3 +1,4 @@
+- Fixed execution of ezcWorkflowNodeFinally nodes.
 - Fixed issue #14437: id conflict possible in ezcWorkflowVisitorNodeCollector.
 - The ezcWorkflow class now implements the Countable interface. count() invoked
   for an ezcWorkflow object will return the number of nodes of the workflow.
